@@ -1,5 +1,9 @@
 
-2021-02-19  Ron Norman <rjn@inglenet.com>
+2021-02-17  Ron Norman <rjn@inglenet.com>
+
+	* fsqlxfd.c: If PIC 9 field in index had HIGH-VALUES set to all 9s
+
+2021-02-16  Ron Norman <rjn@inglenet.com>
 
 	* common.h: Added COB_XFDT_COMP5IDX and COB_XFDT_COMP5REL
 	* file.h: Added fields for the rid_tablename processing
